--- a/docs/style/view/bmcs/view/synthesis/synthesis-preparation.less
+++ b/docs/style/view/bmcs/view/synthesis/synthesis-preparation.less
@@ -38,7 +38,7 @@
 
         >.mate-container {
             display   : flex;
-            overflow-x: auto;
+            overflow  : hidden;
             gap       : 20px;
             min-height: 160px;
         }
@@ -47,7 +47,7 @@
             display   : flex;
             gap       : 20px;
             min-height: 300px;
-            overflow  : auto;
+            overflow  : hidden;
         }
 
         >.button-wrap {
